add Team Description

--- a/proposal/report.tex
+++ b/proposal/report.tex
@@ -39,6 +39,10 @@
 
 我参考了一下浙大的队伍主页，包含队伍信息、训练帐号、目标、友情链接、杂事杂项（一些小结和提醒）、板子整理、个人训练、团队训练、比赛记录等信息。他们的队伍主页支持 MarkDown 语法，并且有版本控制（即可以恢复到历史版本）。对于每场比赛，他们都有总结。我们决心做出跟浙大一样好的 ACM 训练总结系统。
 
+\section{项目地址}
+
+本项目开源，项目地址为： https://github.com/africamonkey/Training\_Summary\_Python
+
 \section{项目成员}
 
 王凯祺 16337233
